CAMERA FUNCTIONALITY AND EDIT MESSAGE VIEW. Edit Message view exists and has style and icons. Camera now takes full photos (not square cropped images). Image is saved in $rootScope and appears in Edit Message view. Edit Message view has icons overlaid. X button returns to Camera View. Comments added to various CSS and HTML files.

--- a/snapchap/www/app/components/camera/camera.css
+++ b/snapchap/www/app/components/camera/camera.css
@@ -1,13 +1,13 @@
 #camera-view {
   height: 100%;
-  background-color: rgb(50, 50, 50);
+  background-color: black;
 }
 
 #camera-view__flash-btn {
   background-image: url('../../../img/icon/flash-white.png');
 }
 #camera-view__profile-btn {
-  background-image: url('../../../img/icon/snapchat-white.png');
+  background-image: url('../../../img/icon/snapchat-filled-white.png');
 }
 #camera-view__rear-camera-btn {
   background-image: url('../../../img/icon/rear-camera-white.png');
