added token-based authorization

--- a/snapchap/www/app/components/profile/profile.html
+++ b/snapchap/www/app/components/profile/profile.html
@@ -4,7 +4,7 @@
         <nav id="profile-view__nav-top" class="nav-top">
             <button id="profile-view__share-btn" class="icon-btn"></button>
             <button id="profile-view__trophy-btn" class="icon-btn"></button>
-            <button id="profile-view__settings-btn" class="icon-btn" ui-sref="settings"></button>
+            <button id="profile-view__settings-btn" class="icon-btn" ui-sref="settings" ng-click="hideMenu()"></button>
         </nav>
         <div id="profile-view__main-content">
           <div id="snap-confetti"><span></span></div>
