--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -46,7 +46,7 @@
         <li style="color:gray">Clear Conversations</li>
         <li style="color:gray">Restore Purchases</li>
         <li style="color:gray">Blocked</li>
-        <li ui-sref="logInSignUp">Log Out<button class="forward-btn">></button></li>
+        <li ng-click="logout()">Log Out<button class="forward-btn">></button></li>
       </ul>
     </ion-content>
 </ion-view>
