--- a/snapchap/www/app/components/signUp/signUp.html
+++ b/snapchap/www/app/components/signUp/signUp.html
@@ -9,16 +9,16 @@
         <h3>What's your name?</h3>
         <div>
           <p class="heading">FIRST NAME</p>
-          <input class="input" />
+          <input class="input"  ng-model="firstName"/>
         </div>
         <div>
           <p class="heading">LAST NAME</p>
-          <input class="input" />
+          <input class="input" ng-model="lastName"/>
         </div>
         <p id="sign-up-view__terms">
           By tapping Sign Up & Accept, you agree to the <span class="text-link">Terms of Service</span> and <span class="text-link">Privacy Policy</span>.
         </p>
-        <button id="sign-up-view__sign-up-btn" class="btn pill-btn" ui-sref="camera" animate-profile-nav ng-click="showMenu(); removeProfileNav()">Sign Up & Accept</button>
+        <button id="sign-up-view__sign-up-btn" class="btn pill-btn" animate-profile-nav ng-click="showMenu(); removeProfileNav(); createName(firstName, lastName)">Sign Up & Accept</button>
       </div>
 
       <div id="sign-up-view__keyboard"></div>
