--- a/snapchap/www/app/components/profile/profile.html
+++ b/snapchap/www/app/components/profile/profile.html
@@ -8,8 +8,8 @@
         </nav>
         <div id="profile-view__main-content">
           <div id="snap-confetti"><span></span></div>
-          <p id="profile-view__display-name" class="profile-view__display-name">Display Name</p>
-          <p id="profile-view__username" class="profile-view__username">username</p>
+          <p id="profile-view__display-name" class="profile-view__display-name">{{userInfo.first_name}} {{userInfo.last_name}}</p>
+          <p id="profile-view__username" class="profile-view__username">username: {{userInfo.username}}</p>
 
           <div ui-sref="addedMe" id="profile-view__added-me-btn" class="profile-view__main-content-btn">Added Me</div>
           <div ui-sref="addFriends" id="profile-view__add-friends-btn" class="profile-view__main-content-btn" >Add Friends</div>
