--- a/snapchap/www/app/components/editMessage/editMessage.css
+++ b/snapchap/www/app/components/editMessage/editMessage.css
@@ -1,5 +1,6 @@
 #edit-message-view {
   /*height: 100%;*/
+  height: 100vh;
 }
 #edit-message-view ion-content {
   background-color: black;
@@ -28,8 +29,28 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: black;
+}
+/* form */
+#edit-message-view__form {
+  width: 100%;
+}
+/* input */
+#edit-message-view__input {
+  width: 100%;
+  font-size: 1.3rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  transition: bottom 0.5s, display 0.5s;
+  border-radius: 0px;
 }
  /* image */
 #edit-message-view__image {
@@ -67,3 +88,8 @@
   -webkit-background-size: 55px;
           background-size: 55px;
 }
+
+/*canvas {
+  max-width: 100vw;
+  max-height: 100vh;
+}*/
