--- a/snapchap/www/app/components/addUsername/addUsername.html
+++ b/snapchap/www/app/components/addUsername/addUsername.html
@@ -12,17 +12,21 @@
         <input type="text" placeholder="Search" ng-model="searchText" ng-keyup="getSearchResults(searchText)">
     </form>
 
-    <section class="userName" ng-repeat="user in users">
-      <p>{{user.username}}</p>
-    </section>
+    <ul class="userName" ng-repeat="user in users">
+      <li>
+        <p class="add-username-view__display-name">DISPLAY NAME {{user.first_name}} {{user.last_name}}</p>
+        <p class="add-username-view__username">{{user.username}}</p>
+        <button class="pill-btn add-username-view__add-btn"><span class="add-username-view__add-btn__plus">Add</span></button>
+      </li>
+    </ul>
 
-    <div class="add-username-view__text">
+    <div class="add-username-view__explanation">
       <p>{{userInfo.username}}</p>
-      <p>{{userInfo.first_name}} {{userInfo.last_name}} is your username</p>
+      <p>is your username</p>
     </div>
 
-    <div class="add-username-view__text">
-      <p>Display Name</p>
+    <div class="add-username-view__explanation">
+      <p>{{userInfo.first_name}} {{userInfo.last_name}}</p>
       <p>is how you appear on Snapchat</p>
     </div>
 
