--- a/snapchap/www/app/components/logIn/logIn.html
+++ b/snapchap/www/app/components/logIn/logIn.html
@@ -14,7 +14,7 @@
         </div>
         <div>
           <p class="heading">PASSWORD</p>
-          <input class="input" ng-model="password"/>
+          <input class="input" type="password" ng-model="password"/>
         </div>
         <p id="forgot-your-password" class="text-link">
           Forgot your password?
