--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -7,11 +7,11 @@
 
       <span class="heading">MY ACCOUNT</span>
       <ul>
-        <li ui-sref="name">Name {{userInfo.first_name}} {{userInfo.last_name}}<button class="forward-btn">></button></li>
-        <li ui-sref="username">Username {{userInfo.username}}<button class="forward-btn">></button></li>
+        <li ui-sref="name">Name<button class="forward-btn">{{userInfo.first_name}} {{userInfo.last_name}} &nbsp;></button></li>
+        <li ui-sref="username">Username<button class="forward-btn">{{userInfo.username}} &nbsp;></button></li>
         <li ui-sref="birthday">Birthday<button class="forward-btn">></button></li>
         <li style="color:gray">Mobile Number</li>
-        <li ui-sref="email">Email {{userInfo.email}} <button class="forward-btn">></button></li>
+        <li ui-sref="email">Email<button class="forward-btn">{{userInfo.email}} &nbsp;></button></li>
         <li style="color:gray">Bitmoji</li>
         <li ui-sref="password">Password<button class="forward-btn">></button></li>
         <li style="color:gray">Login Verification</li>
