--- a/snapchap/www/app/components/signUp/signUp-password/signUp-password.html
+++ b/snapchap/www/app/components/signUp/signUp-password/signUp-password.html
@@ -2,14 +2,14 @@
     <ion-content>
 
       <nav>
-        <button ui-sref="logInSignUp" id="sign-up-view-back-btn" class="back-btn"><</button>
+        <button ui-sref="signUp-username" id="sign-up-view-back-btn" class="back-btn"><</button>
       </nav>
 
       <div id="sign-up-view__form">
         <h3>What's your password?</h3>
         <div>
           <p class="heading">PASSWORD</p>
-          <input class="input"  ng-model="password"/>
+          <input class="input" type="password" ng-model="password"/>
         </div>
 
         <button id="sign-up-view__sign-up-btn" class="btn pill-btn" animate-profile-nav ng-click="createPassword(password)">Continue</button>
