--- a/snapchap/www/app/components/signUp/signUp-username/signUp-username.html
+++ b/snapchap/www/app/components/signUp/signUp-username/signUp-username.html
@@ -2,7 +2,7 @@
     <ion-content>
 
       <nav>
-        <button ui-sref="logInSignUp" id="sign-up-view-back-btn" class="back-btn"><</button>
+        <button ui-sref="signUp" id="sign-up-view-back-btn" class="back-btn"><</button>
       </nav>
 
       <div id="sign-up-view__form">
