--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -8,7 +8,7 @@
       <span class="heading">MY ACCOUNT</span>
       <ul>
         <li ui-sref="name">Name {{userInfo.first_name}} {{userInfo.last_name}}<button class="forward-btn">></button></li>
-        <li ui-sref="username">Username {{userInfo.username}}<button class="forward-btn">></button></li>
+        <li style="color:gray">Username {{userInfo.username}}</button></li>
         <li ui-sref="birthday">Birthday<button class="forward-btn">></button></li>
         <li style="color:gray">Mobile Number</li>
         <li ui-sref="email">Email {{userInfo.email}} <button class="forward-btn">></button></li>
