--- a/snapchap/www/app/components/password/password.html
+++ b/snapchap/www/app/components/password/password.html
@@ -1,9 +1,14 @@
-<ion-view title="Password" id="page17">
-    <ion-content padding="true" class="has-header">
-        <form id="password-form5" class="list">
-            <label class="item item-input" id="password-input5">
-                <input type="password" placeholder="Password">
-            </label>
-        </form>
+<ion-view id="password-view">
+    <ion-content>
+      <nav>
+        <button ui-sref="settings" id="password-view__back-btn" class="back-btn"><</button>
+        <div class="nav-top-heading">Password</div>
+      </nav>
+
+      <div id="password-warning">
+        To set a new password, please enter your <br> current password first.
+      </div>
+      <input id="password-input" type="text" name="name" value="" placeholder="Password" ng-model="password" />
+      <button id="password-button" type="button" name="button">Forgot you password?</button>
     </ion-content>
 </ion-view>
