--- a/snapchap/www/main.css
+++ b/snapchap/www/main.css
@@ -11,6 +11,9 @@
 @import "./app/components/chat/chat.css";
 @import "./app/components/editMessage/editMessage.css";
 @import "./app/components/email/email.css";
+@import "./app/components/name/name.css";
+@import "./app/components/password/password.css";
+@import "./app/components/newPassword/newPassword.css";
 @import "./app/components/myFriends/myFriends.css";
 @import "./app/components/logInSignUp/logInSignUp.css";
 @import "./app/components/logIn/logIn.css";
