--- a/snapchap/www/app/components/addUsername/addUsername.html
+++ b/snapchap/www/app/components/addUsername/addUsername.html
@@ -16,7 +16,7 @@
       <li>
         <p class="add-username-view__display-name">{{user.first_name}} {{user.last_name}}</p>
         <p class="add-username-view__username">{{user.username}}</p>
-        <button class="pill-btn add-username-view__add-btn" ng-click="sendFriendRequest(user.id)" ><span class="add-username-view__add-btn__plus">Add</span></button>
+        <button class="pill-btn add-username-view__add-btn" ng-click="sendFriendRequest(user.id); getSearchResults(searchText)" ><span class="add-username-view__add-btn__plus">Add</span></button>
       </li>
     </ul>
     <section ng-hide="hideExplanation">
