--- a/snapchap/www/app/components/logIn/logIn.html
+++ b/snapchap/www/app/components/logIn/logIn.html
@@ -16,6 +16,9 @@
           <p class="heading">PASSWORD</p>
           <input class="input" type="password" ng-model="password"/>
         </div>
+        <p id="incorrect-information-message">
+          {{response}}
+        </p>
         <p id="forgot-your-password" class="text-link">
           Forgot your password?
         </p>
