added confirm Password page and update email works front to back

--- a/snapchap/www/app/components/confirmPassword/confirmPassword.css
+++ b/snapchap/www/app/components/confirmPassword/confirmPassword.css
@@ -1,11 +1,11 @@
-#email-view .nav-top-heading {
+#confirm-password-view .nav-top-heading {
   color: #00A686;
   text-align: center;
   padding: 18px;
   border-bottom: thin solid rgba(150, 150, 150, 0.3);
   background-color: white;
 }
-#email-view .heading {
+#confirm-password-view .heading {
   display: flex;
   align-items: center;
   background-color: rgba(244, 244, 244, 1);
@@ -16,11 +16,11 @@
   color: #00A686;
   margin-left: 0px;
 }
-#email-view__back-btn {
+#confirm-password-view__back-btn {
   z-index: 1;
   color: #00A686;
 }
-#email-text {
+#confirm-password-text {
   color: rgba(150, 150, 150, 1);
   margin: 10px 0px;
   font-size: 0.7rem;
@@ -28,7 +28,7 @@
   background-color: white;
   width: 100%;
 }
-#email-warning {
+#confirm-password-warning {
   text-align: center;
   color: rgba(150, 150, 150, 1);
   margin: 18px 10vw;
@@ -36,11 +36,11 @@
   line-height: 0.9rem;
 }
 
-#email-view {
+#confirm-password-view {
   background-color: rgba(240, 240, 240, 1);
 }
 
-#email-input {
+#confirm-password-input {
   background-color: white;
   height: 50px;
   width: 100%;
@@ -52,5 +52,5 @@
 }
 
 #continue-button {
-  
+
 }
