socket id's are now assigned at login and revoked at logout

--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -31,7 +31,8 @@
                 <div>{{item}}</div>
             </div>
         </section>
-
+        <button ng-click="connect()">Connect</button>
+        <button ng-click="disconnect()">Diconnect</button>
       </div>
 
       <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
