finished update name and update password features. needs some styling

--- a/snapchap/www/app/components/newPassword/newPassword.css
+++ b/snapchap/www/app/components/newPassword/newPassword.css
@@ -49,6 +49,7 @@
   padding-left: 15px;
   display: flex;
   align-items: center;
+  margin-bottom: 1px;
 }
 
 #newPassword-button {
@@ -57,4 +58,25 @@
   margin-top: 20px;
   color: blue;
   outline: none;
+}
+
+#weak-emoji {
+  position: relative;
+  top: -87px;
+  left: 79vw;
+  color: red;
+}
+
+#ok-emoji {
+  position: relative;
+  top: -87px;
+  left: 85vw;
+  color: orange;
+}
+
+#strong-emoji {
+  position: relative;
+  top: -87px;
+  left: 79vw;
+  color: green;
 }
