--- a/snapchap/www/app/components/newPassword/newPassword.html
+++ b/snapchap/www/app/components/newPassword/newPassword.html
@@ -8,7 +8,25 @@
       <div id="newPassword-warning">
         Please choose a new password. Strong <br> passwords use a combination of lowercase <br> and uppercase letters, numbers, and symbols.
       </div>
-      <input id="newPassword-input" type="password" name="name" value="" placeholder="New Password" ng-model="newPassword" />
-      <input id="newPassword-input" type="password" name="name" value="" placeholder="Confirm Password" ng-model="confirmPassword" />
+      <input id="newPassword-input" type="password" name="name" value="" placeholder="New Password" ng-model="newPassword" ng-keyup="verifyPasswordStrength($event, newPassword)"/>
+      <input id="newPassword-input" type="password" name="name" value="" placeholder="Confirm Password" ng-model="confirmPassword" ng-keyup="verifyPasswordsMatch(newPassword, confirmPassword)"/>
+      <div class="emoji">
+        <div id="weak-emoji" ng-show="weak">
+          weak
+          <i class="em em-confused"></i>
+        </div>
+        <div id="ok-emoji" ng-show="ok">
+          ok
+          <i class="em em-ok_hand"></i>
+        </div>
+        <div id="strong-emoji" ng-show="strong">
+          strong
+          <i class="em em-sunglasses"></i>
+        </div>
+      </div>
+
+      <button type="button" name="button" ng-show="saveButton" ng-click="saveNewPassword(confirmPassword)">Save</button>
+
+
     </ion-content>
 </ion-view>
